--- a/style.css
+++ b/style.css
@@ -1,32 +1,41 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-.main{
+body {
     width: 100%;
-    background: linear-gradient(to top,rgba(0,0,0,0.5)50%,rgba(0,0,0,0.5)50%),url(timon-studler-1xJ3qTjAJU8-unsplash.jpg);
+    height: 100vh;
+    ;
+}
+
+.main {
+    width: 100%;
+    background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%), url(timon-studler-1xJ3qTjAJU8-unsplash.jpg);
     background-position: center;
     background-size: cover;
     height: 109vh;
 
 }
 
-.navbar{
-    width: 1200px;
+.navbar {
+    width: 100%;
     height: 75px;
     margin: auto;
-
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
-.icon{
+.icon {
     width: 200px;
     float: left;
     height: 70px;
 
 }
 
-.logo{
+.logo {
     color: #ff7200;
     font-size: 35px;
     font-family: Arial;
@@ -36,15 +45,14 @@
 
 }
 
-.menu{
-    width: 400px;
+.menu {
     float: left;
     height: 70px;
-
+    display: flex;
 
 }
 
-ul{
+ul {
     float: left;
     display: flex;
     justify-content: center;
@@ -52,7 +60,7 @@ ul{
 
 }
 
-ul li{
+ul li {
     list-style: none;
     margin-left: 62px;
     margin-top: 27px;
@@ -60,7 +68,7 @@ ul li{
 
 }
 
-ul li a{
+ul li a {
     text-decoration: none;
     color: white;
     font-family: Arial;
@@ -68,19 +76,16 @@ ul li a{
 
 }
 
-ul li a:hover{
+ul li a:hover {
     color: #ff7200;
 
 }
 
-.search{
-    width: 330px;
-    float: left;
-    margin-left: 270px;
-
+.search {
+    padding-right: 50px;
 }
 
-.srch{
+.srch {
     font-family: 'Times New Roman';
     width: 200px;
     height: 40px;
@@ -98,7 +103,7 @@ ul li a:hover{
 
 }
 
-.btn{
+.btn {
     width: 100px;
     height: 40px;
     background: #ff7200;
@@ -113,12 +118,19 @@ ul li a:hover{
 
 }
 
-.btn:focus{
+.btn:focus {
     outline: none;
 
 }
 
-.srch:focus{
+.srch:focus {
     outline: none;
-    
+
+}
+
+
+@media(max-width:740px){
+    .menu{
+        display: none;
+    }
 }
